certifications/jakarta-mvc/3.0/TCK-Results.md
TCK Results
===========

As required by the
[Eclipse Foundation Technology Compatibility Kit License](https://www.eclipse.org/legal/tck.php),
following is a summary of the TCK results for releases of Jakarta MVC.

# Jakarta MVC 3.0 Certification Summary

- Organization Name ("Organization") and, if applicable, URL:
  - [Eclipse Foundation](https://eclipse.org)
- Product Name, Version and download URL (if applicable):
  - [Eclipse Krazo 4.0.0](https://eclipse-ee4j.github.io/krazo/downloads/4.0.0.html)
- Specification Name, Version and download URL:
  - [Jakarta MVC 3.0](https://jakarta.ee/specifications/mvc/3.0)
- TCK Version, digital SHA-256 fingerprint and download URL:
  - [Jakarta MVC TCK 3.0.0](https://download.eclipse.org/jakartaee/mvc/3.0/jakarta-mvc-tck-3.0.0.zip)
  - SHA-256: `eff97aa77a0f3fd9b9c8bc20e2b438b34c3e1e66b470a10dc85020ad18a4b5cd`
- Public URL of TCK Results Summary:
  - [https://eclipse-ee4j.github.io/krazo/certifications/jakarta-mvc/3.0/TCK-Results.html](https://eclipse-ee4j.github.io/krazo/certifications/jakarta-mvc/3.0/TCK-Results.html)
- Any Additional Specification Certification Requirements:
  - None
- Java runtime used to run the implementation:
  - OpenJDK Runtime Environment Temurin-21.0.6+7 (build 21.0.6+7-LTS)
- Summary of the information for the certification environment, operating system, cloud, ...:
  - Linux basic-pg4gp 6.6.9-200.fc39.x86_64 #1 SMP PREEMPT_DYNAMIC Mon Jan  1 20:05:54 UTC 2024 x86_64 x86_64 x86_64 GNU/Linux
  - OpenJDK 64-Bit Server VM Temurin-21.0.6+7 (build 21.0.6+7-LTS, mixed mode, sharing)
  - Eclipse GlassFish 8.0.0-M10

## Test results

<div class="section">
<h2>Surefire Report<a name="Surefire_Report"></a></h2></div>
<div class="section">
<h2>Summary<a name="Summary"></a></h2><a name="Summary"></a>
<p>[<a href="#Summary">Summary</a>] [<a href="#Package_List">Package List</a>] [<a href="#Test_Cases">Test Cases</a>]</p><br />
<table border="1" class="bodyTable">
<tr class="a">
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td>135</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>79.373</td></tr></table><br />
<p>Note: failures are anticipated and checked for with assertions while errors are unanticipated.</p><br /></div>
<div class="section">
<h2>Package List<a name="Package_List"></a></h2><a name="Package_List"></a>
<p>[<a href="#Summary">Summary</a>] [<a href="#Package_List">Package List</a>] [<a href="#Test_Cases">Test Cases</a>]</p><br />
<table border="1" class="bodyTable">
<tr class="a">
<th>Package</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.application.inheritance">ee.jakarta.tck.mvc.tests.application.inheritance</a></td>
<td>6</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>2.603</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.i18n.standard">ee.jakarta.tck.mvc.tests.i18n.standard</a></td>
<td>3</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.36</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.instances.proxy">ee.jakarta.tck.mvc.tests.mvc.instances.proxy</a></td>
<td>1</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.044</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.binding.base">ee.jakarta.tck.mvc.tests.binding.base</a></td>
<td>3</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>2.309</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.models">ee.jakarta.tck.mvc.tests.mvc.models</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.544</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.verify">ee.jakarta.tck.mvc.tests.security.csrf.verify</a></td>
<td>16</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>5.519</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.controller.inject">ee.jakarta.tck.mvc.tests.mvc.controller.inject</a></td>
<td>5</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.413</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.application.app">ee.jakarta.tck.mvc.tests.application.app</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>14.79</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.binding.bool">ee.jakarta.tck.mvc.tests.binding.bool</a></td>
<td>5</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>2.407</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.viewengine.base">ee.jakarta.tck.mvc.tests.viewengine.base</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>0.982</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.redirect.scope">ee.jakarta.tck.mvc.tests.mvc.redirect.scope</a></td>
<td>3</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.293</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.i18n.algorithm">ee.jakarta.tck.mvc.tests.i18n.algorithm</a></td>
<td>3</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.278</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.controller.returntype">ee.jakarta.tck.mvc.tests.mvc.controller.returntype</a></td>
<td>6</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.596</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.exception">ee.jakarta.tck.mvc.tests.security.csrf.exception</a></td>
<td>1</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>0.939</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.events">ee.jakarta.tck.mvc.tests.events</a></td>
<td>5</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>2.093</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.i18n.access">ee.jakarta.tck.mvc.tests.i18n.access</a></td>
<td>3</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.226</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.binding.types">ee.jakarta.tck.mvc.tests.binding.types</a></td>
<td>6</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.501</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.header">ee.jakarta.tck.mvc.tests.security.csrf.header</a></td>
<td>6</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>2.777</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.binding.numeric">ee.jakarta.tck.mvc.tests.binding.numeric</a></td>
<td>12</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>10.987</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.instances.lifecycle">ee.jakarta.tck.mvc.tests.mvc.instances.lifecycle</a></td>
<td>1</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.21</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.application.context">ee.jakarta.tck.mvc.tests.application.context</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>2.446</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.base">ee.jakarta.tck.mvc.tests.security.csrf.base</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.207</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.security.xss">ee.jakarta.tck.mvc.tests.security.xss</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.821</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.uri">ee.jakarta.tck.mvc.tests.mvc.uri</a></td>
<td>8</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.666</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.controller.mediatype">ee.jakarta.tck.mvc.tests.mvc.controller.mediatype</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.105</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.form">ee.jakarta.tck.mvc.tests.form</a></td>
<td>6</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>5.309</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.viewengine.algorithm">ee.jakarta.tck.mvc.tests.viewengine.algorithm</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.782</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.instances.cdi">ee.jakarta.tck.mvc.tests.mvc.instances.cdi</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.343</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.controller.annotation">ee.jakarta.tck.mvc.tests.mvc.controller.annotation</a></td>
<td>3</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.684</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.redirect.send">ee.jakarta.tck.mvc.tests.mvc.redirect.send</a></td>
<td>5</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.006</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.response">ee.jakarta.tck.mvc.tests.mvc.response</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.133</td></tr></table><br />
<p>Note: package statistics are not computed recursively, they only sum up all of its testsuites numbers.</p>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.application.inheritance<a name="ee.jakarta.tck.mvc.tests.application.inheritance"></a></h3><a name="ee.jakarta.tck.mvc.tests.application.inheritance"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.application.inheritanceInheritanceTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.application.inheritanceInheritanceTest">InheritanceTest</a></td>
<td>6</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>2.603</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.i18n.standard<a name="ee.jakarta.tck.mvc.tests.i18n.standard"></a></h3><a name="ee.jakarta.tck.mvc.tests.i18n.standard"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.i18n.standardI18nStandardTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.i18n.standardI18nStandardTest">I18nStandardTest</a></td>
<td>3</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.36</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.mvc.instances.proxy<a name="ee.jakarta.tck.mvc.tests.mvc.instances.proxy"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.instances.proxy"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.instances.proxyInjectProxyTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.instances.proxyInjectProxyTest">InjectProxyTest</a></td>
<td>1</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.044</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.binding.base<a name="ee.jakarta.tck.mvc.tests.binding.base"></a></h3><a name="ee.jakarta.tck.mvc.tests.binding.base"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.binding.baseBindingBaseTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.binding.baseBindingBaseTest">BindingBaseTest</a></td>
<td>3</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>2.309</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.mvc.models<a name="ee.jakarta.tck.mvc.tests.mvc.models"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.models"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.modelsBuiltinEngineModelTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.modelsBuiltinEngineModelTest">BuiltinEngineModelTest</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.544</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.security.csrf.verify<a name="ee.jakarta.tck.mvc.tests.security.csrf.verify"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.csrf.verify"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.verifyCsrfVerifyDefaultConfigTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.verifyCsrfVerifyDefaultConfigTest">CsrfVerifyDefaultConfigTest</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.251</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.verifyCsrfVerifyExplicitConfigTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.verifyCsrfVerifyExplicitConfigTest">CsrfVerifyExplicitConfigTest</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.485</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.verifyCsrfVerifyImplicitConfigTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.verifyCsrfVerifyImplicitConfigTest">CsrfVerifyImplicitConfigTest</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.583</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.verifyCsrfVerifyOffConfigTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.verifyCsrfVerifyOffConfigTest">CsrfVerifyOffConfigTest</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.2</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.mvc.controller.inject<a name="ee.jakarta.tck.mvc.tests.mvc.controller.inject"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.controller.inject"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.controller.injectInjectParamsTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.controller.injectInjectParamsTest">InjectParamsTest</a></td>
<td>5</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.413</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.application.app<a name="ee.jakarta.tck.mvc.tests.application.app"></a></h3><a name="ee.jakarta.tck.mvc.tests.application.app"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.application.appMvcAppAnnotationTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.application.appMvcAppAnnotationTest">MvcAppAnnotationTest</a></td>
<td>1</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>12.661</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.application.appMvcAppWebXmlTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.application.appMvcAppWebXmlTest">MvcAppWebXmlTest</a></td>
<td>1</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>2.129</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.binding.bool<a name="ee.jakarta.tck.mvc.tests.binding.bool"></a></h3><a name="ee.jakarta.tck.mvc.tests.binding.bool"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.binding.boolBindingBooleanTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.binding.boolBindingBooleanTest">BindingBooleanTest</a></td>
<td>5</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>2.407</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.viewengine.base<a name="ee.jakarta.tck.mvc.tests.viewengine.base"></a></h3><a name="ee.jakarta.tck.mvc.tests.viewengine.base"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.viewengine.baseViewEngineBaseTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.viewengine.baseViewEngineBaseTest">ViewEngineBaseTest</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>0.982</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.mvc.redirect.scope<a name="ee.jakarta.tck.mvc.tests.mvc.redirect.scope"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.redirect.scope"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.redirect.scopeRedirectScopeTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.redirect.scopeRedirectScopeTest">RedirectScopeTest</a></td>
<td>3</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.293</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.i18n.algorithm<a name="ee.jakarta.tck.mvc.tests.i18n.algorithm"></a></h3><a name="ee.jakarta.tck.mvc.tests.i18n.algorithm"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.i18n.algorithmI18nAlgorithmTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.i18n.algorithmI18nAlgorithmTest">I18nAlgorithmTest</a></td>
<td>3</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.278</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.mvc.controller.returntype<a name="ee.jakarta.tck.mvc.tests.mvc.controller.returntype"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.controller.returntype"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.controller.returntypeReturnTypeTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.controller.returntypeReturnTypeTest">ReturnTypeTest</a></td>
<td>6</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.596</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.security.csrf.exception<a name="ee.jakarta.tck.mvc.tests.security.csrf.exception"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.csrf.exception"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.exceptionCsrfCustomMapperTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.exceptionCsrfCustomMapperTest">CsrfCustomMapperTest</a></td>
<td>1</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>0.939</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.events<a name="ee.jakarta.tck.mvc.tests.events"></a></h3><a name="ee.jakarta.tck.mvc.tests.events"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.eventsMvcEventsTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.eventsMvcEventsTest">MvcEventsTest</a></td>
<td>5</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>2.093</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.i18n.access<a name="ee.jakarta.tck.mvc.tests.i18n.access"></a></h3><a name="ee.jakarta.tck.mvc.tests.i18n.access"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.i18n.accessI18nAccessTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.i18n.accessI18nAccessTest">I18nAccessTest</a></td>
<td>3</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.226</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.binding.types<a name="ee.jakarta.tck.mvc.tests.binding.types"></a></h3><a name="ee.jakarta.tck.mvc.tests.binding.types"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.binding.typesBindingTypesTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.binding.typesBindingTypesTest">BindingTypesTest</a></td>
<td>6</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.501</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.security.csrf.header<a name="ee.jakarta.tck.mvc.tests.security.csrf.header"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.csrf.header"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.headerCsrfCustomHeaderTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.headerCsrfCustomHeaderTest">CsrfCustomHeaderTest</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.272</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.headerCsrfDefaultHeaderTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.headerCsrfDefaultHeaderTest">CsrfDefaultHeaderTest</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.505</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.binding.numeric<a name="ee.jakarta.tck.mvc.tests.binding.numeric"></a></h3><a name="ee.jakarta.tck.mvc.tests.binding.numeric"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.binding.numericBindingBigDecimalTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.binding.numericBindingBigDecimalTest">BindingBigDecimalTest</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.868</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.binding.numericBindingBigIntegerTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.binding.numericBindingBigIntegerTest">BindingBigIntegerTest</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.823</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.binding.numericBindingDoubleTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.binding.numericBindingDoubleTest">BindingDoubleTest</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.927</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.binding.numericBindingFloatTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.binding.numericBindingFloatTest">BindingFloatTest</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.72</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.binding.numericBindingIntegerTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.binding.numericBindingIntegerTest">BindingIntegerTest</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.852</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.binding.numericBindingLongTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.binding.numericBindingLongTest">BindingLongTest</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.797</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.mvc.instances.lifecycle<a name="ee.jakarta.tck.mvc.tests.mvc.instances.lifecycle"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.instances.lifecycle"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.instances.lifecycleControllerLifecycleTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.instances.lifecycleControllerLifecycleTest">ControllerLifecycleTest</a></td>
<td>1</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.21</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.application.context<a name="ee.jakarta.tck.mvc.tests.application.context"></a></h3><a name="ee.jakarta.tck.mvc.tests.application.context"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.application.contextMvcContextTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.application.contextMvcContextTest">MvcContextTest</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>2.446</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.security.csrf.base<a name="ee.jakarta.tck.mvc.tests.security.csrf.base"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.csrf.base"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.baseCsrfBaseTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.security.csrf.baseCsrfBaseTest">CsrfBaseTest</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.207</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.security.xss<a name="ee.jakarta.tck.mvc.tests.security.xss"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.xss"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.security.xssEncodersTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.security.xssEncodersTest">EncodersTest</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.821</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.mvc.uri<a name="ee.jakarta.tck.mvc.tests.mvc.uri"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.uri"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.uriUriBuildingTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.uriUriBuildingTest">UriBuildingTest</a></td>
<td>8</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.666</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.mvc.controller.mediatype<a name="ee.jakarta.tck.mvc.tests.mvc.controller.mediatype"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.controller.mediatype"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.controller.mediatypeMediaTypeTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.controller.mediatypeMediaTypeTest">MediaTypeTest</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.105</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.form<a name="ee.jakarta.tck.mvc.tests.form"></a></h3><a name="ee.jakarta.tck.mvc.tests.form"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.formCustomFormMethodFieldTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.formCustomFormMethodFieldTest">CustomFormMethodFieldTest</a></td>
<td>1</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.774</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.formDefaultFormMethodOverwriteTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.formDefaultFormMethodOverwriteTest">DefaultFormMethodOverwriteTest</a></td>
<td>4</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.782</td></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.formDisabledFormMethodOverwriteTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.formDisabledFormMethodOverwriteTest">DisabledFormMethodOverwriteTest</a></td>
<td>1</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.753</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.viewengine.algorithm<a name="ee.jakarta.tck.mvc.tests.viewengine.algorithm"></a></h3><a name="ee.jakarta.tck.mvc.tests.viewengine.algorithm"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.viewengine.algorithmViewEngineAlgorithmPathTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.viewengine.algorithmViewEngineAlgorithmPathTest">ViewEngineAlgorithmPathTest</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>0.97</td></tr>
<tr class="a">
<td><a href="#ee.jakarta.tck.mvc.tests.viewengine.algorithmViewEngineAlgorithmTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.viewengine.algorithmViewEngineAlgorithmTest">ViewEngineAlgorithmTest</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>0.812</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.mvc.instances.cdi<a name="ee.jakarta.tck.mvc.tests.mvc.instances.cdi"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.instances.cdi"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.instances.cdiCdiControllerTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.instances.cdiCdiControllerTest">CdiControllerTest</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.343</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.mvc.controller.annotation<a name="ee.jakarta.tck.mvc.tests.mvc.controller.annotation"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.controller.annotation"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.controller.annotationControllerAnnotationTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.controller.annotationControllerAnnotationTest">ControllerAnnotationTest</a></td>
<td>3</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.684</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.mvc.redirect.send<a name="ee.jakarta.tck.mvc.tests.mvc.redirect.send"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.redirect.send"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.redirect.sendSendRedirectTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.redirect.sendSendRedirectTest">SendRedirectTest</a></td>
<td>5</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.006</td></tr></table></div>
<div class="section">
<h3>ee.jakarta.tck.mvc.tests.mvc.response<a name="ee.jakarta.tck.mvc.tests.mvc.response"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.response"></a>
<table border="1" class="bodyTable">
<tr class="a">
<th></th>
<th>Class</th>
<th>Tests</th>
<th>Errors </th>
<th>Failures</th>
<th>Skipped</th>
<th>Success Rate</th>
<th>Time</th></tr>
<tr class="b">
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.responseResponseFeaturesTest"><img src="images/icon_success_sml.gif" alt="" /></a></td>
<td><a href="#ee.jakarta.tck.mvc.tests.mvc.responseResponseFeaturesTest">ResponseFeaturesTest</a></td>
<td>2</td>
<td>0</td>
<td>0</td>
<td>0</td>
<td>100%</td>
<td>1.133</td></tr></table></div><br /></div>
<div class="section">
<h2>Test Cases<a name="Test_Cases"></a></h2><a name="Test_Cases"></a>
<p>[<a href="#Summary">Summary</a>] [<a href="#Package_List">Package List</a>] [<a href="#Test_Cases">Test Cases</a>]</p>
<div class="section">
<h3>MvcAppAnnotationTest<a name="MvcAppAnnotationTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.application.appMvcAppAnnotationTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>testUrlSpaceViaAnnotation</td>
<td>2.005</td></tr></table></div>
<div class="section">
<h3>MvcAppWebXmlTest<a name="MvcAppWebXmlTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.application.appMvcAppWebXmlTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>testUrlSpaceViaAnnotation</td>
<td>0.403</td></tr></table></div>
<div class="section">
<h3>MvcContextTest<a name="MvcContextTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.application.contextMvcContextTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>testMvcContextInjected</td>
<td>0.599</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>testMvcContextScope</td>
<td>0.05</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>testMvcContextAccessInformation</td>
<td>0.053</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>testMvcContextAccessViaEl</td>
<td>0.041</td></tr></table></div>
<div class="section">
<h3>InheritanceTest<a name="InheritanceTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.application.inheritanceInheritanceTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>annotationsOnControllerAndSuperMethod</td>
<td>0.312</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>annotationsOnlyOnSuperMethod</td>
<td>0.244</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>annotationsOnSuperClassAndInterfaceMethod</td>
<td>0.043</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>annotationsOnlyOnControllerMethod</td>
<td>0.022</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>annotationsOnControllerAndInterfaceMethod</td>
<td>0.079</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>annotationsOnlyOnInterfaceMethod</td>
<td>0.307</td></tr></table></div>
<div class="section">
<h3>BindingBaseTest<a name="BindingBaseTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.binding.baseBindingBaseTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitValidationError</td>
<td>0.69</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitBindingError</td>
<td>0.063</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitValidValue</td>
<td>0.058</td></tr></table></div>
<div class="section">
<h3>BindingBooleanTest<a name="BindingBooleanTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.binding.boolBindingBooleanTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitBooleanAsFoobar</td>
<td>0.813</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitBooleanAsTrue</td>
<td>0.068</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitBooleanAsEmpty</td>
<td>0.044</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitBooleanAsFalse</td>
<td>0.061</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitBooleanAsOn</td>
<td>0.053</td></tr></table></div>
<div class="section">
<h3>BindingBigDecimalTest<a name="BindingBigDecimalTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.binding.numericBindingBigDecimalTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitEmptyBigDecimal</td>
<td>0.499</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitValidBigDecimal</td>
<td>0.062</td></tr></table></div>
<div class="section">
<h3>BindingBigIntegerTest<a name="BindingBigIntegerTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.binding.numericBindingBigIntegerTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitEmptyBigInteger</td>
<td>0.476</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitValidBigInteger</td>
<td>0.065</td></tr></table></div>
<div class="section">
<h3>BindingDoubleTest<a name="BindingDoubleTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.binding.numericBindingDoubleTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitEmptyDouble</td>
<td>0.492</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitValidDouble</td>
<td>0.053</td></tr></table></div>
<div class="section">
<h3>BindingFloatTest<a name="BindingFloatTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.binding.numericBindingFloatTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitEmptyFloat</td>
<td>0.452</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitValidFloat</td>
<td>0.053</td></tr></table></div>
<div class="section">
<h3>BindingIntegerTest<a name="BindingIntegerTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.binding.numericBindingIntegerTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitValidInteger</td>
<td>0.511</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitEmptyInteger</td>
<td>0.062</td></tr></table></div>
<div class="section">
<h3>BindingLongTest<a name="BindingLongTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.binding.numericBindingLongTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitEmptyLong</td>
<td>0.5</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitValidLong</td>
<td>0.052</td></tr></table></div>
<div class="section">
<h3>BindingTypesTest<a name="BindingTypesTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.binding.typesBindingTypesTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>bindingWithHeaderParam</td>
<td>0.306</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>bindingWithFormParam</td>
<td>0.018</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>bindingWithCookieParam</td>
<td>0.019</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>bindingWithQueryParam</td>
<td>0.018</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>bindingWithMatrixParam</td>
<td>0.039</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>bindingWithPathParam</td>
<td>0.017</td></tr></table></div>
<div class="section">
<h3>MvcEventsTest<a name="MvcEventsTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.eventsMvcEventsTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>aroundRenderView</td>
<td>0.342</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>aroundControllerEvents</td>
<td>0.055</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>redirectEvent</td>
<td>0.286</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>afterControllerWithError</td>
<td>0.168</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>afterViewWithError</td>
<td>0.241</td></tr></table></div>
<div class="section">
<h3>CustomFormMethodFieldTest<a name="CustomFormMethodFieldTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.formCustomFormMethodFieldTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>processPUTIfFieldMatchesDifferentName</td>
<td>0.522</td></tr></table></div>
<div class="section">
<h3>DefaultFormMethodOverwriteTest<a name="DefaultFormMethodOverwriteTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.formDefaultFormMethodOverwriteTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>processPOSTWithoutHiddenFormMethod</td>
<td>0.414</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>processPATCHWhenHiddenFormMethodIsPATCH</td>
<td>0.199</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>processDELETEWhenHiddenFormMethodIsDelete</td>
<td>0.049</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>processPUTWhenHiddenFormMethodIsPUT</td>
<td>0.05</td></tr></table></div>
<div class="section">
<h3>DisabledFormMethodOverwriteTest<a name="DisabledFormMethodOverwriteTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.formDisabledFormMethodOverwriteTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>processPOSTIgnoringHiddenFieldWhenFormMethodOverwriteIsDisabled</td>
<td>0.574</td></tr></table></div>
<div class="section">
<h3>I18nAccessTest<a name="I18nAccessTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.i18n.accessI18nAccessTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>accessLocaleFromView</td>
<td>0.242</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>accessLocaleFromController</td>
<td>0.017</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>accessLocaleFromViewEngine</td>
<td>0.032</td></tr></table></div>
<div class="section">
<h3>I18nAlgorithmTest<a name="I18nAlgorithmTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.i18n.algorithmI18nAlgorithmTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>chainStopsForNonNullResult</td>
<td>0.256</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>highestPrioExecutedFirst</td>
<td>0.016</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>continueChainForNullResult</td>
<td>0.03</td></tr></table></div>
<div class="section">
<h3>I18nStandardTest<a name="I18nStandardTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.i18n.standardI18nStandardTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>multipleLocalesInAcceptLanguageHeader</td>
<td>0.354</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>missingAcceptLanguageHeader</td>
<td>0.047</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>singleLocaleInAcceptLanguageHeader</td>
<td>0.034</td></tr></table></div>
<div class="section">
<h3>ControllerAnnotationTest<a name="ControllerAnnotationTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.controller.annotationControllerAnnotationTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>controllerClass</td>
<td>0.361</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>controllerHybrid</td>
<td>0.027</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>controllerMethod</td>
<td>0.024</td></tr></table></div>
<div class="section">
<h3>InjectParamsTest<a name="InjectParamsTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.controller.injectInjectParamsTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>injectQueryParam</td>
<td>0.275</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>injectHeaderParam</td>
<td>0.039</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>injectFieldParam</td>
<td>0.045</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>injectPropertyParam</td>
<td>0.016</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>injectPathParam</td>
<td>0.033</td></tr></table></div>
<div class="section">
<h3>MediaTypeTest<a name="MediaTypeTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.controller.mediatypeMediaTypeTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>defaultMediaType</td>
<td>0.211</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>customMediaType</td>
<td>0.022</td></tr></table></div>
<div class="section">
<h3>ReturnTypeTest<a name="ReturnTypeTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.controller.returntypeReturnTypeTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>responseWithNullEntity</td>
<td>0.398</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>responseWithStringEntity</td>
<td>0.056</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>voidWithoutViewAnnotation</td>
<td>0.073</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>stringWithNullResult</td>
<td>0.042</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>stringReturnType</td>
<td>0.04</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>voidWithViewAnnotation</td>
<td>0.016</td></tr></table></div>
<div class="section">
<h3>CdiControllerTest<a name="CdiControllerTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.instances.cdiCdiControllerTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>controllerCdiInjection</td>
<td>0.31</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>hybridCdiInjection</td>
<td>0.034</td></tr></table></div>
<div class="section">
<h3>ControllerLifecycleTest<a name="ControllerLifecycleTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.instances.lifecycleControllerLifecycleTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>controllerRequestScope</td>
<td>0.303</td></tr></table></div>
<div class="section">
<h3>InjectProxyTest<a name="InjectProxyTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.instances.proxyInjectProxyTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>injectProxyIfRequired</td>
<td>0.251</td></tr></table></div>
<div class="section">
<h3>BuiltinEngineModelTest<a name="BuiltinEngineModelTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.modelsBuiltinEngineModelTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>cdiModelJsp</td>
<td>0.497</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>mvcModelsJsp</td>
<td>0.019</td></tr></table></div>
<div class="section">
<h3>RedirectScopeTest<a name="RedirectScopeTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.redirect.scopeRedirectScopeTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>sessionScope</td>
<td>0.373</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>redirectScope</td>
<td>0.034</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>requestScope</td>
<td>0.029</td></tr></table></div>
<div class="section">
<h3>SendRedirectTest<a name="SendRedirectTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.redirect.sendSendRedirectTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>relativePathRedirectPrefix</td>
<td>0.065</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>relativePathResponse</td>
<td>0.014</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>usesCorrectStatusCide</td>
<td>0.017</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>redirectViaRedirectPrefix</td>
<td>0.013</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>redirectViaResponse</td>
<td>0.031</td></tr></table></div>
<div class="section">
<h3>ResponseFeaturesTest<a name="ResponseFeaturesTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.responseResponseFeaturesTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>responseAllowsSettingHeaders</td>
<td>0.226</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>responseAllowsSettingCacheControl</td>
<td>0.016</td></tr></table></div>
<div class="section">
<h3>UriBuildingTest<a name="UriBuildingTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.mvc.uriUriBuildingTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>mapPathParam</td>
<td>0.436</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>simpleUriViaEl</td>
<td>0.043</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>mapQueryParam</td>
<td>0.044</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>encodingQueryParam</td>
<td>0.037</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>mapMatrixParam</td>
<td>0.017</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>encodingMatrixParam</td>
<td>0.044</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>supportsUriRef</td>
<td>0.04</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>encodingPathParam</td>
<td>0.072</td></tr></table></div>
<div class="section">
<h3>CsrfBaseTest<a name="CsrfBaseTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.csrf.baseCsrfBaseTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>tokenIsProvidedViaElAndResponseHeader</td>
<td>0.297</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>canInjectTokenIntoHiddenField</td>
<td>0.046</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>csrfInstanceViaContext</td>
<td>0.036</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>csrfInstanceViaEL</td>
<td>0.016</td></tr></table></div>
<div class="section">
<h3>CsrfCustomMapperTest<a name="CsrfCustomMapperTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.csrf.exceptionCsrfCustomMapperTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>customExceptionMapper</td>
<td>0.235</td></tr></table></div>
<div class="section">
<h3>CsrfCustomHeaderTest<a name="CsrfCustomHeaderTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.csrf.headerCsrfCustomHeaderTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitValidCustomTokenViaHeader</td>
<td>0.386</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitInvalidCustomTokenViaHeader</td>
<td>0.059</td></tr></table></div>
<div class="section">
<h3>CsrfDefaultHeaderTest<a name="CsrfDefaultHeaderTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.csrf.headerCsrfDefaultHeaderTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitInvalidTokenViaForm</td>
<td>0.278</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitValidTokenViaForm</td>
<td>0.191</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitValidTokenViaHeader</td>
<td>0.025</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitInvalidTokenViaHeader</td>
<td>0.02</td></tr></table></div>
<div class="section">
<h3>CsrfVerifyDefaultConfigTest<a name="CsrfVerifyDefaultConfigTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.csrf.verifyCsrfVerifyDefaultConfigTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithAnnotationAndInvalidToken</td>
<td>0.22</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithAnnotationAndValidToken</td>
<td>0.174</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithoutAnnotationAndInvalidToken</td>
<td>0.028</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithoutAnnotationAndValidToken</td>
<td>0.03</td></tr></table></div>
<div class="section">
<h3>CsrfVerifyExplicitConfigTest<a name="CsrfVerifyExplicitConfigTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.csrf.verifyCsrfVerifyExplicitConfigTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithAnnotationAndInvalidToken</td>
<td>0.296</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithAnnotationAndValidToken</td>
<td>0.248</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithoutAnnotationAndInvalidToken</td>
<td>0.104</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithoutAnnotationAndValidToken</td>
<td>0.069</td></tr></table></div>
<div class="section">
<h3>CsrfVerifyImplicitConfigTest<a name="CsrfVerifyImplicitConfigTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.csrf.verifyCsrfVerifyImplicitConfigTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithAnnotationAndInvalidToken</td>
<td>0.337</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithAnnotationAndValidToken</td>
<td>0.299</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithoutAnnotationAndInvalidToken</td>
<td>0.054</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithoutAnnotationAndValidToken</td>
<td>0.049</td></tr></table></div>
<div class="section">
<h3>CsrfVerifyOffConfigTest<a name="CsrfVerifyOffConfigTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.csrf.verifyCsrfVerifyOffConfigTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithAnnotationAndInvalidToken</td>
<td>0.348</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithAnnotationAndValidToken</td>
<td>0.054</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithoutAnnotationAndInvalidToken</td>
<td>0.034</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>submitFormWithoutAnnotationAndValidToken</td>
<td>0.047</td></tr></table></div>
<div class="section">
<h3>EncodersTest<a name="EncodersTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.security.xssEncodersTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>encodesJavaScript</td>
<td>0.256</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>encodersInjectable</td>
<td>0.238</td></tr>
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>encodersAvailableFromEl</td>
<td>0.137</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>encodesHtml</td>
<td>0.427</td></tr></table></div>
<div class="section">
<h3>ViewEngineAlgorithmPathTest<a name="ViewEngineAlgorithmPathTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.viewengine.algorithmViewEngineAlgorithmPathTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>relativeViewPath</td>
<td>0.223</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>absoluteViewPath</td>
<td>0.023</td></tr></table></div>
<div class="section">
<h3>ViewEngineAlgorithmTest<a name="ViewEngineAlgorithmTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.viewengine.algorithmViewEngineAlgorithmTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>overwriteBuiltinEngine</td>
<td>0.049</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>priorityOrderingCustomEngines</td>
<td>0.013</td></tr></table></div>
<div class="section">
<h3>ViewEngineBaseTest<a name="ViewEngineBaseTest"></a></h3><a name="ee.jakarta.tck.mvc.tests.viewengine.baseViewEngineBaseTest"></a>
<table border="1" class="bodyTable">
<tr class="a">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>viewEngineCustom</td>
<td>0.116</td></tr>
<tr class="b">
<td><img src="images/icon_success_sml.gif" alt="" /></td>
<td>viewEngineJsp</td>
<td>0.135</td></tr></table></div><br /></div>
      </div>
    </div>
